Calm Business: Fix the cover h2 alignment in the editor

--- a/calm-business/style-editor.scss
+++ b/calm-business/style-editor.scss
@@ -381,6 +381,10 @@ figcaption,
 		}
 	}
 
+	h2 {
+		text-align: inherit;
+	}
+
 	@include media(tablet) {
 		padding: $size__spacing-unit 10%;
 		min-height: 620px;
